tests/snapshot/error/source_locations/expression/yield_star/async_iterator_close_start_throws_module.exp
Error: 
  ┌ source_locations/expression/yield_star/async_iterator_close_start_throws_module.js:8:15
  |
8 |         throw new Error();
  |               ^
Stack trace:
  at get return (source_locations/expression/yield_star/async_iterator_close_start_throws_module.js:8:15)
  at generator (source_locations/expression/yield_star/async_iterator_close_start_throws_module.js:15:3)
  at throw (<native>)
  at <module> (source_locations/expression/yield_star/async_iterator_close_start_throws_module.js:20:7)